--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Enter your word!"
+        android:hint="Enter your word!"
         android:ems="10"
         android:layout_marginTop="54dp"
         android:id="@+id/userWordEditText"
