--- a/app/src/main/res/layout/activity_palindrome.xml
+++ b/app/src/main/res/layout/activity_palindrome.xml
@@ -2,22 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_results"
+    android:id="@+id/activity_palindrome"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.vanesharma.palindromegame.PalindromeActivity">
-
-    <Button
-        android:text="Replay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/replayButton"
-        android:elevation="24dp"
-        android:layout_marginBottom="34dp"
-        android:fontFamily="sans-serif-medium"
-        android:background="@android:color/background_light"
-        android:layout_alignBottom="@+id/imageView2"
-        android:layout_centerHorizontal="true" />
+    tools:context="com.vanesharma.palindromegame.PalindromeActivity"
+    android:background="@drawable/backdrop">
 
     <ImageView
         android:layout_width="@android:dimen/thumbnail_height"
@@ -28,14 +18,31 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:text="Replay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/replayButton"
+        android:elevation="24dp"
+        android:layout_marginBottom="34dp"
+        android:fontFamily="monospace"
+        android:background="@android:color/black"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:backgroundTint="@android:color/background_light"
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_centerHorizontal="true"
+        android:typeface="monospace"
+        android:textStyle="normal|bold" />
+
     <TextView
         android:text="Yay! Your word is a palindrome!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="36dp"
         android:id="@+id/palindromeTextView"
-        android:textSize="18sp"
+        android:textSize="24sp"
+        android:textStyle="normal|bold"
+        android:textColor="@android:color/black"
         android:layout_alignTop="@+id/imageView2"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="36dp" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
