--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.vanesharma.palindromegame.MainActivity">
+    tools:context="com.vanesharma.palindromegame.MainActivity"
+    android:background="@drawable/backdrop">
 
 
     <TextView
-        android:text="Palindrome"
+        android:text="Let's Check for Palindromes!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="37dp"
         android:id="@+id/titleTextView"
+        android:textStyle="normal|bold"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="78dp" />
+
+    <ImageView
+        android:layout_width="@android:dimen/thumbnail_width"
+        android:layout_height="@android:dimen/thumbnail_height"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:id="@+id/imageView3"
+        android:scaleType="fitCenter"
+        android:layout_below="@+id/titleTextView"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:text="Button"
+        android:text="Start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/startButton"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/titleTextView" />
+        android:elevation="24dp"
+        android:layout_marginBottom="165dp"
+        android:fontFamily="monospace"
+        android:background="@android:color/black"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:backgroundTint="@android:color/background_light"
+        android:typeface="monospace"
+        android:textSize="14sp"
+        android:textStyle="normal|bold"
+        android:textAlignment="center"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
