--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -4,16 +4,8 @@
     android:id="@+id/activity_play"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.vanesharma.palindromegame.PlayActivity">
-
-    <Button
-        android:text="See Results!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:id="@+id/enterButton"
-        android:layout_below="@+id/userWordEditText"
-        android:layout_centerHorizontal="true" />
+    tools:context="com.vanesharma.palindromegame.PlayActivity"
+    android:background="@drawable/backdrop">
 
     <EditText
         android:layout_width="wrap_content"
@@ -21,7 +13,7 @@
         android:inputType="text"
         android:hint="Enter your word!"
         android:ems="10"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="52dp"
         android:id="@+id/userWordEditText"
         android:textAlignment="center"
         android:textStyle="normal|bold"
@@ -32,8 +24,28 @@
         android:text="Check to see if your word is a palindrome!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="50dp"
         android:id="@+id/promptTextView"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="18sp"
+        android:textStyle="normal|bold"
+        android:textAlignment="center"
+        android:textColor="@android:color/black" />
+
+    <Button
+        android:text="Check Now!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/enterButton"
+        android:elevation="24dp"
+        android:fontFamily="monospace"
+        android:background="@android:color/black"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:backgroundTint="@android:color/background_light"
+        android:typeface="monospace"
+        android:textStyle="normal|bold"
+        android:layout_marginTop="51dp"
+        android:layout_below="@+id/userWordEditText"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
